buildscript {
    repositories {
        mavenCentral()
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7.38'
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
}

apply plugin: 'org.spongepowered.mixin'

group = mod_group_id
version = mod_version

base {
    archivesName = mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true
    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
        client {
            property 'forge.enabledGameTestNamespaces', mod_id
            jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.util=ALL-UNNAMED'
        }
        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {

            workingDirectory project.file('run-data')

            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    flatDir {
        dir 'libs'
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:' + minecraft_version + '-' + forge_version
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'


    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.4"))
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.4")) {
        jarJar.ranged(it, "[0.5.4,)")
    }

    implementation("org.jspecify:jspecify:1.0.0")

    implementation fg.deobf(files("libs/goetydelight-1.2.0f2+20260225.jar"))
    implementation fg.deobf(files("libs/goety-2.5.50.2.jar"))
    implementation fg.deobf(files("libs/alexsmobs-1.22.9.jar"))
    implementation fg.deobf(files("libs/create-1.20.1-6.0.8.jar"))
    implementation fg.deobf(files("libs/irons_spellbooks-1.20.1-3.15.4.jar"))
    implementation fg.deobf(files("libs/EndingLibrary-1.20.1-2.1.12beta-all.jar"))
    implementation fg.deobf(files("libs/species-3.5.jar"))
    implementation fg.deobf(files("libs/covenant_of_the_seven-2.2.6-hotfix.jar"))
    implementation fg.deobf(files("libs/photon-forge-1.20.1-1.1.17.jar"))

    implementation fg.deobf("curse.maven:difficulty-enhancement-1456194:7953458")
    implementation fg.deobf("curse.maven:mowzies-mobs-250498:7815705")
    implementation fg.deobf("curse.maven:enigmatic-legacy-336184:5600004")
    implementation fg.deobf("curse.maven:to-tweaks-irons-spells-1046916:7424522")
    implementation fg.deobf("curse.maven:modernfix-790626:7911677")
    implementation fg.deobf("curse.maven:armageddon-1110642:7142556")
    implementation fg.deobf("curse.maven:l2h-909207:7746182")
    implementation fg.deobf("curse.maven:l2l-620203:6806000")
    implementation fg.deobf("curse.maven:composite-material-982540:6310307")
    implementation fg.deobf("curse.maven:curios-309927:6418456")
    implementation fg.deobf("curse.maven:geckolib-388172:7553267")
    implementation fg.deobf("curse.maven:embeddium-908741:5681725")
    implementation fg.deobf("curse.maven:celestisynth-872712:7686018")
    implementation fg.deobf("curse.maven:class-enhancement-1460324:7801433")
    implementation fg.deobf("curse.maven:capybaras-mod-1345431:7354242")
    implementation fg.deobf("curse.maven:born-in-chaos-686437:7366478")
    implementation fg.deobf("curse.maven:mekalus-oculus-fork-with-fixed-mekanism-mekasuit-1130957:6994299")
    implementation fg.deobf("curse.maven:lendercataclysm-551586:7867528")
    implementation fg.deobf("curse.maven:legendary-monsters-944035:7628159")
    implementation fg.deobf("curse.maven:lionfish-api-1001614:5922047")
    implementation fg.deobf("curse.maven:goety-revelation-1236817:7638178")
    implementation fg.deobf("dev.xkmc.l2serial:l2serial:1.2.2")
    implementation fg.deobf("curse.maven:terramity-1084134:6054971")
    implementation fg.deobf("curse.maven:better-combat-by-daedelus-639842:7287334")
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
                             forge_version: forge_version, forge_version_range: forge_version_range,
                             loader_version_range: loader_version_range,
                             mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
                             mod_authors: mod_authors, mod_description: mod_description,]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                "Specification-Title": mod_id,
                "Specification-Vendor": mod_authors,
                "Specification-Version": "1",
                "Implementation-Title": project.name,
                "Implementation-Version": project.jar.archiveVersion,
                "Implementation-Vendor": mod_authors,
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs": "${mod_id}.mixins.json"
        ])
    }
    finalizedBy 'reobfJar'
}